--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,3 +35,9 @@ body {
 input, textarea {
   color: black;
 }
+
+.card{
+  margin: 10px;
+  padding: 10px;
+  background-color: rgb(128, 72, 7);
+}
