--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,4 +40,12 @@ input, textarea {
   margin: 10px;
   padding: 10px;
   background-color: rgb(128, 72, 7);
+  display: inline-block;
+  width: 150px;
+}
+
+.section{
+  background-color: rgb(35, 33, 33);
+  padding: 20px;
+  width: inherit;
 }
